[SC-18278] Fix search box visibility in documents tab.

--- a/src/app/crm/documents/documents.component.less
+++ b/src/app/crm/documents/documents.component.less
@@ -1,38 +1,58 @@
 :host {
     display: block;
     position: relative;
+
     .mat-expansion-panel {
         box-shadow: none !important;
     }
+
     ::ng-deep .main-content {
         height: auto !important;
     }
+
     .wrapper {
         width: 100%;
         height: 100%;
         position: relative;
+
         ::ng-deep dx-file-manager {
             .dx-filemanager-thumbnails-item.dx-state-focused {
-                border: none!important;
+                border: none !important;
             }
-            .dx-datagrid-rowsview .dx-row-focused.dx-data-row > td {
+
+            .dx-datagrid-rowsview .dx-row-focused.dx-data-row>td {
                 border-bottom: 1px solid #ddd;
             }
-            .dx-datagrid-rowsview .dx-row-focused.dx-data-row > td:not(.dx-focused) {
+
+            .dx-datagrid-rowsview .dx-row-focused.dx-data-row>td:not(.dx-focused) {
                 color: #424c56 !important;
             }
+
             .dx-list-item-icon-container {
-                display: block !important;             
+                display: block !important;
             }
+
             .dx-filemanager-toolbar {
                 height: 50px;
             }
+
             .dx-icon-overflow {
                 display: none;
             }
+
             .dx-drawer-panel-content {
                 z-index: 1;
             }
         }
+    }
+}
+
+::ng-deep .dx-toolbar-after {
+    .dx-state-invisible {
+        display: block !important;
+    }
+
+    .dx-show-invalid-badge {
+        display: block !important;
     }
 }
